SIS2-198: bound button to seasonal wheel, created animation that goes through months - to current month.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -261,7 +261,7 @@
 																																							c-18.5-3.9-37.4-5.8-56.3-5.9h-1.1c-19.4,0-38.7,2-57.7,6c-1.8,0.4-3.5,1.1-5.1,2.2c-1.5,1.1-2.8,2.4-3.8,4c-1,1.6-1.6,3.4-1.8,5.2
 																																							c-0.3,1.8-0.1,3.7,0.3,5.5L276,233.2z"/>
 						</g>
-						<path class="st2" d="M290,332.4c23.4,0,42.4-19,42.4-42.4c0-23.4-19-42.4-42.4-42.4c-23.4,0-42.4,19-42.4,42.4
+						<path class="st2" @click="seasonWheelController()" d="M290,332.4c23.4,0,42.4-19,42.4-42.4c0-23.4-19-42.4-42.4-42.4c-23.4,0-42.4,19-42.4,42.4
 																																C247.6,313.4,266.6,332.4,290,332.4z"/>
 					</svg>
 				</div>
@@ -279,8 +279,7 @@
 			</svg>
 		</div>
 		<div class="months-activity-cards">
-		<btn @click="addHoverClasses()">Button</btn>
-
+{# Code for articles #}
 
 		</div>
 	</div>
