--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -256,12 +256,12 @@
 																																							L276,233.2z"/>
 						</mask>
 						<g class="st24">
-							<path class="st2" d="M276,233.2c0.8,2.9,2.5,5.5,4.9,7.3c2.4,1.8,5.3,2.8,8.3,2.8c3,0,5.9-1,8.3-2.8c2.4-1.8,4.1-4.4,4.9-7.3
+							<path class="st2" @click="getSeasonalArticlesByMonth('Jan')" d="M276,233.2c0.8,2.9,2.5,5.5,4.9,7.3c2.4,1.8,5.3,2.8,8.3,2.8c3,0,5.9-1,8.3-2.8c2.4-1.8,4.1-4.4,4.9-7.3
 																																							l54.7-204.4c0.5-1.8,0.6-3.7,0.3-5.5c-0.3-1.8-0.9-3.6-1.9-5.2c-1-1.6-2.2-2.9-3.8-4c-1.5-1.1-3.2-1.8-5-2.2
 																																							c-18.5-3.9-37.4-5.8-56.3-5.9h-1.1c-19.4,0-38.7,2-57.7,6c-1.8,0.4-3.5,1.1-5.1,2.2c-1.5,1.1-2.8,2.4-3.8,4c-1,1.6-1.6,3.4-1.8,5.2
 																																							c-0.3,1.8-0.1,3.7,0.3,5.5L276,233.2z"/>
 						</g>
-						<path class="st2" @click="seasonWheelController()" d="M290,332.4c23.4,0,42.4-19,42.4-42.4c0-23.4-19-42.4-42.4-42.4c-23.4,0-42.4,19-42.4,42.4
+						<path class="st2" @click="seasonWheelController(1)" d="M290,332.4c23.4,0,42.4-19,42.4-42.4c0-23.4-19-42.4-42.4-42.4c-23.4,0-42.4,19-42.4,42.4
 																																C247.6,313.4,266.6,332.4,290,332.4z"/>
 					</svg>
 				</div>
@@ -279,7 +279,7 @@
 			</svg>
 		</div>
 		<div class="months-activity-cards">
-{# Code for articles #}
+		{# Code for articles #}
 
 		</div>
 	</div>
