SIS2-44: Adding …  to breadcrumb

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/breadcrumb.css
@@ -27,7 +27,7 @@
     & + &::before {
       padding: 5px 3px;
       color: var(--color-gray);
-      content: "/";
+      content: "";
     }
   }
 
