SIS2-87: Added months to drupalSettings and filtering by machine name

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -271,7 +271,7 @@
 	<div class="months-wrapper">
 		<div class="row">
 			<div class="col-xs-10 col-md-10 col-md-offset-1 headline-wrapper">
-				<h3>Month name</h3>
+				<h3 id="month_name">{{ month_name|t }}</h3>
 				<button class="months-button" @click="getSeasonalArticles()">Se alle aktiviteter</button>
 			</div>
 			<svg width="1495" height="27" viewbox="0 0 1195 27" fill="none" xmlns="http://www.w3.org/2000/svg">
