SIS2-87: Replace “see all link” on ajax

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
@@ -191,7 +191,7 @@
   display: flex;
   justify-content: space-between;
 }
-.months-button {
+.seasonal-wheel__link {
   cursor: pointer;
   font-family: "Nunito", sans-serif;
   font-size: 1.125rem;
