--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -30,17 +30,17 @@
     </div>
     <div class="row">
       <div class="col-xs-12 col-md-3">
-        <div class="overview-form__search-filters">
+        <div class="overview-form__search-filters js-overview-form__search-filters">
           <div class="accordion js-accordion">
-            <div class="accordion__items">
-              <div class="accordion-buttons">
-                <button id="buttonExpandAll" type="button" class="accordion-button__expand button button--ghost">
-                  {{ "Expand All"|t }} +
-                </button>
-                <button id="buttonCollapseAll" type="button" class="accordion-button__collapse button button--ghost hide">
-                  {{ "Collapse All"|t }} -
-                </button>
-              </div>
+            <div class="accordion-buttons">
+              <button id="buttonExpandAll" type="button" class="accordion-button__expand button button--ghost">
+                {{ "Expand All"|t }} +
+              </button>
+              <button id="buttonCollapseAll" type="button" class="accordion-button__collapse button button--ghost hide">
+                {{ "Collapse All"|t }} -
+              </button>
+            </div>
+            <div class="accordion__items js-accordion__items">
               {{ element['facets'].field_class }}
               {{ element['facets'].field_location }}
               {{ element['facets'].field_season }}
