SIS2-77: Added styling of newspage

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -28,6 +28,7 @@
   --color-yellow-dark: #f2b300;
   --color-orange: #f69e4b;
   --color-orange-dark: #e08a39;
+  --color-apricot: #F0846E;
   --color-green: #008c5d;
   --color-green-dark: #1c6153;
 
