--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -1,8 +1,4 @@
 .inspiration-overview {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: var(--container-spacing-mobile);
-
   &__intro {
     margin-bottom: 32px;
     padding-right: var(--container-spacing-mobile);
@@ -90,6 +86,15 @@
     font-size: var(--base-font-size-extra-small);
     font-family: var(--base-font-family);
     background-color: var(--color-primary);
+
+    &--news {
+      background-color: var(--color-red);
+    }
+
+    &--blog {
+      color: var(--color-purple-dark);
+      background-color: var(--color-purple);
+    }
   }
 
   &__content {
@@ -219,10 +224,11 @@
     }
   }
 
-  &__headline {
-    margin-bottom: 24px;
-    font-size: var(--base-font-size-xxxxlarge);
-    line-height: 1.1;
+  &__term {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: var(--container-spacing-mobile);
+
   }
 }
 
