--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/term-overview.html.twig
@@ -10,7 +10,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-      <div{{ attributes.addClass('inspiration-overview') }}>
+      <div{{ attributes.addClass('inspiration-overview__term') }}>
         {{ entities }}
       </div>
     </div>
