SIS: 198: Loading default articles

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -268,7 +268,7 @@
 				</svg>
 			</div>
 		</div>
-		<div class="months-activity-cards"></div>
+		<div class="months-activity-cards">{{ content.articles }}</div>
 	</div>
 </div>
 
