SIS2-65: Changed markup and styling for taxonomy pages

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -1,4 +1,8 @@
 .inspiration-overview {
+  &__pageheader-headline {
+    margin-bottom: 24px;
+  }
+
   &__intro {
     margin-bottom: 32px;
     padding-right: var(--container-spacing-mobile);
