Fix z-index on layout builder forms to fix overlay issues when using layout builder

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/layout/grid.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/layout/grid.css
@@ -14,6 +14,10 @@
     padding-bottom: var(--grid-section-spacing);
   }
 
+  &-form {
+    z-index: 1;
+  }
+
   &__inner {
     padding-top: calc(var(--grid-section-spacing-mobile) * .5);
 
