--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form.html.twig
@@ -12,7 +12,7 @@
 #}
 {{ attach_library('adminimal_theme/global-styling') }}
 {{ attach_library('seven/vertical-tabs') }}
-<div class="section section--spacing-top-medium section--spacing-bottom-medium">
+<div class="section section-form section--spacing-top-medium section--spacing-bottom-medium">
   <div class="container">
     <form{{ attributes }}>
       {{ children }}
