--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -276,17 +276,16 @@
 {% verbatim %}
 
 	<transition name="fade">
-		<div class="modal" v-if="showModal">
+		<div class="modal hidden-modal" v-if="showModal">
 			<div class="modal__backdrop" @click="closeModal()"/>
-			<div class="modal__dialog">
-				<div class="modal__header">
-					<button type="button" class="modal__close" @click="closeModal()">
-						<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 352 512">
-							<path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path>
-						</svg>
-					</button>
-				</div>
-
+				<div class="modal__dialog">
+					<div class="modal__header">
+						<button type="button" class="modal__close" @click="closeModal()">
+							<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 352 512">
+								<path fill="currentColor" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path>
+							</svg>
+						</button>
+					</div>
 				<div class="modal__body">
 					<div class="row">
 						<div class="col-xs-6 modal-image__container">
@@ -294,18 +293,17 @@
 								<img class="modal__image"></img>
 							</a>
 						</div>
-					<div
-						class="col-xs-6">
-						<a class="modal-link__title" href="">
-						  <h4>${randomMonthData.title}</h4>
-						</a>
-						<p class="modal__description">${randomMonthData.description}</p>
+					<div class="col-xs-6">
+					  <a class="modal-link__title" href="">
+					    <h4>${randomMonthData.title}</h4>
+					  </a>
+					  <p class="modal__description">${randomMonthData.description}</p>
 					</div>
+				  </div>
 				</div>
-
-			</div>
-
 			<div class="modal__footer"></div>
 		</div>
-	</div>
-</transition>{% endverbatim %}</div>
+	  </div>
+	</transition>
+
+{% endverbatim %}
