--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/inline-navigation-item.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/inline-navigation-item.css
@@ -10,8 +10,8 @@
   flex-shrink: 0;
   align-items: flex-start;
   justify-content: flex-start;
-  width: calc(90% - 40px);
-  padding: 20px;
+  width: 100%;
+  padding: 0 var(--container-spacing-mobile);
 
   picture,
   img {
@@ -25,17 +25,42 @@
   }
 
   @media (--viewport-ms-min) {
-    width: calc(50% - 40px);
+    width: 50%;
+    padding: var(--container-spacing);
+
+    .layout--twocol & {
+
+    }
   }
 
   @media (--viewport-sm-min) {
-    width: 50%;
-    padding: 25px;
+    width: calc(100% / 3);
+
+    .layout--twocol & {
+      width: calc(100% / 3);
+    }
+  }
+
+  @media (--viewport-md-min) {
+    .layout--twocol & {
+      width: 50%;
+    }
+
+    .layout--threecol & {
+      width: 100%;
+    }
   }
 
   @media (--viewport-lg-min) {
-    width: calc(100% / 3);
-    padding: 50px;
+    width: calc(100% / 4);
+
+    .layout--twocol & {
+      width: 50%;
+    }
+
+    .layout--threecol & {
+      width: 100%;
+    }
   }
 
   &__link {
@@ -83,19 +108,14 @@
   }
 
   &__title {
-    margin-bottom: 30px;
-    font-weight: 900;
+    margin-bottom: 12px;
+    font-weight: 600;
     font-size: var(--base-font-size-xlarge);
-
-    @media (--viewport-md-min) {
-      font-weight: 900;
-      font-size: var(--base-font-size-xxlarge);
-    }
+    line-height: 1.3;
   }
 
   &__text {
-    margin-bottom: 30px;
-    font-weight: 300;
+    margin-bottom: 12px;
     font-size: var(--base-font-size);
     line-height: 1.3;
 
