--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -29,7 +29,7 @@
 							<path class="st0" d="M249.6,247.4c1.2,1.3,2.7,2.3,4.4,3c1.6,0.7,3.4,1.1,5.2,1.1c2.1,0,4.2-0.5,6.2-1.5c1.9-0.9,3.6-2.3,4.9-4
 							c1.3-1.6,2.1-3.6,2.5-5.6c0.4-2,0.3-4.2-0.3-6.2L217.7,29.9c-0.8-2.9-2.5-5.5-4.9-7.3c-2.4-1.8-5.3-2.8-8.3-2.8c-1.4,0-2.9,0.2-4.3,0.7c-36.9,12.1-70.8,31.7-99.7,57.5c-1.4,1.2-2.5,2.7-3.3,4.4c-0.8,1.7-1.2,3.5-1.2,5.3c-0.1,1.9,0.3,3.7,1,5.4c0.7,1.7,1.7,3.3,3,4.6L249.6,247.4z"/>
 						</mask>
-						<g class="december">
+						<g class="december seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('december')" d="M249.6,247.4c1.2,1.3,2.7,2.3,4.4,3c1.6,0.7,3.4,1.1,5.2,1.1c2.1,0,4.2-0.5,6.2-1.5c1.9-0.9,3.6-2.3,4.9-4
 																																																																																															c1.3-1.6,2.1-3.6,2.5-5.6c0.4-2,0.3-4.2-0.3-6.2L217.7,29.9c-0.8-2.9-2.5-5.5-4.9-7.3c-2.4-1.8-5.3-2.8-8.3-2.8
 																																																																																															c-1.4,0-2.9,0.2-4.3,0.7c-36.9,12.1-70.8,31.7-99.7,57.5c-1.4,1.2-2.5,2.7-3.3,4.4c-0.8,1.7-1.2,3.5-1.2,5.3
@@ -49,7 +49,7 @@
 																																																																																															c-25.8,29-45.3,62.9-57.6,99.7c-0.6,1.8-0.8,3.6-0.7,5.5c0.2,1.9,0.7,3.6,1.6,5.3c0.9,1.6,2.1,3.1,3.6,4.2
 																																																																																															C26,216.8,27.7,217.6,29.5,218.1z"/>
 						</mask>
-						<g class="november">
+						<g class="november seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('november')" d="M29.5,218.1l204.3,54.7c1.2,0.3,2.4,0.5,3.7,0.5c2.7,0,5.3-0.8,7.5-2.4c2.2-1.5,3.9-3.7,5-6.2
 																																																																																															c1.1-2.5,1.3-5.2,0.8-7.9c-0.5-2.6-1.9-5.1-3.8-7L97.4,100.4c-1.3-1.3-2.8-2.3-4.4-3c-1.7-0.7-3.4-1-5.2-1c-1.9,0-3.8,0.4-5.6,1.2
 																																																																																															c-1.8,0.8-3.3,1.9-4.6,3.4c-25.8,29-45.3,62.9-57.6,99.7c-0.6,1.8-0.8,3.6-0.7,5.5c0.2,1.9,0.7,3.6,1.6,5.3
@@ -68,7 +68,7 @@
 																																																																																															c-1.2-0.3-2.4-0.5-3.6-0.5c-3.1,0-6.2,1.1-8.6,3.1c-2.4,2-4.1,4.7-4.8,7.8c-7.9,38-7.9,77.2,0,115.1c0.6,3.1,2.3,5.8,4.8,7.8
 																																																																																															c2.4,2,5.5,3.1,8.6,3.1C26.2,358,27.4,357.9,28.5,357.6z"/>
 						</mask>
-						<g class="october">
+						<g class="october seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('october')" d="M28.5,357.6l204.3-54.7c2.9-0.8,5.5-2.5,7.3-4.9c1.8-2.4,2.8-5.3,2.8-8.3s-1-5.9-2.8-8.3
 																																																																																															c-1.8-2.4-4.4-4.1-7.3-4.9L28.5,221.7c-1.2-0.3-2.4-0.5-3.6-0.5c-3.1,0-6.2,1.1-8.6,3.1c-2.4,2-4.1,4.7-4.8,7.8
 																																																																																															c-7.9,38-7.9,77.2,0,115.1c0.6,3.1,2.3,5.8,4.8,7.8c2.4,2,5.5,3.1,8.6,3.1C26.2,358,27.4,357.9,28.5,357.6z"/>
@@ -87,7 +87,7 @@
 																																																																																															c12.1,36.9,31.7,70.8,57.5,99.8c1.2,1.4,2.8,2.5,4.4,3.3c1.7,0.8,3.5,1.2,5.4,1.2c1.9,0,3.7-0.3,5.4-1c1.7-0.7,3.3-1.7,4.6-3
 																																																																																															L247,329.3z"/>
 						</mask>
-						<g class="september">
+						<g class="september seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('september')" d="M247,329.3c1.9-1.9,3.3-4.3,3.8-7c0.5-2.6,0.3-5.4-0.8-7.9c-1-2.5-2.7-4.6-5-6.2c-2.2-1.5-4.9-2.3-7.5-2.4
 																																																																																															c-1.2,0-2.5,0.2-3.7,0.5L29.5,361.1c-1.8,0.5-3.5,1.3-4.9,2.5s-2.7,2.6-3.6,4.2c-0.9,1.6-1.4,3.4-1.6,5.3c-0.2,1.8,0.1,3.7,0.6,5.5
 																																																																																															c12.1,36.9,31.7,70.8,57.5,99.8c1.2,1.4,2.8,2.5,4.4,3.3c1.7,0.8,3.5,1.2,5.4,1.2c1.9,0,3.7-0.3,5.4-1c1.7-0.7,3.3-1.7,4.6-3
@@ -107,7 +107,7 @@
 																																																																																															c1.8,0.6,3.6,0.8,5.5,0.6c1.9-0.2,3.7-0.7,5.3-1.6c1.6-0.9,3.1-2.1,4.2-3.6c1.1-1.5,2-3.1,2.5-4.9l54.7-204.3
 																																																																																															c0.6-2,0.7-4.1,0.3-6.2C272.4,336.9,271.5,335,270.2,333.3z"/>
 						</mask>
-						<g class="august">
+						<g class="august seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('august')" d="M270.2,333.3c-1.3-1.7-3-3.1-4.9-4c-1.9-0.9-4-1.4-6.2-1.5c-1.8,0-3.5,0.4-5.2,1.1c-1.6,0.7-3.1,1.7-4.4,3
 																																																																																															L100,481.5c-1.3,1.3-2.4,2.9-3,4.6c-0.7,1.7-1,3.6-1,5.5c0,1.9,0.5,3.7,1.3,5.4c0.8,1.7,1.9,3.2,3.3,4.4
 																																																																																															c29,25.8,62.9,45.3,99.7,57.6c1.8,0.6,3.6,0.8,5.5,0.6c1.9-0.2,3.7-0.7,5.3-1.6c1.6-0.9,3.1-2.1,4.2-3.6c1.1-1.5,2-3.1,2.5-4.9
@@ -126,7 +126,7 @@
 																																																																																															c-0.5,1.8-0.6,3.7-0.3,5.5c0.3,1.8,0.9,3.6,1.9,5.2c1,1.6,2.2,2.9,3.8,4c1.5,1.1,3.2,1.8,5,2.2c18.5,3.9,37.4,5.8,56.3,5.9h1.1
 																																																																																															c19.4,0,38.7-2,57.7-6c1.8-0.4,3.6-1.1,5.1-2.2c1.5-1.1,2.8-2.4,3.8-4c1-1.6,1.6-3.3,1.9-5.2c0.3-1.8,0.2-3.7-0.3-5.5L302.4,346z"/>
 						</mask>
-						<g class="july">
+						<g class="july seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('july')" d="M302.4,346c-0.8-2.9-2.5-5.5-4.9-7.3c-2.4-1.8-5.3-2.8-8.3-2.8c-3,0-5.9,1-8.3,2.8c-2.4,1.8-4.1,4.4-4.9,7.3
 																																																																																															l-54.7,204.4c-0.5,1.8-0.6,3.7-0.3,5.5c0.3,1.8,0.9,3.6,1.9,5.2c1,1.6,2.2,2.9,3.8,4c1.5,1.1,3.2,1.8,5,2.2
 																																																																																															c18.5,3.9,37.4,5.8,56.3,5.9h1.1c19.4,0,38.7-2,57.7-6c1.8-0.4,3.6-1.1,5.1-2.2c1.5-1.1,2.8-2.4,3.8-4c1-1.6,1.6-3.3,1.9-5.2
@@ -146,7 +146,7 @@
 																																																																																															c1.6,0.9,3.4,1.4,5.3,1.6c1.9,0.2,3.7,0,5.5-0.6c36.9-12.1,70.8-31.7,99.8-57.5c1.4-1.2,2.5-2.7,3.3-4.4c0.8-1.7,1.2-3.5,1.2-5.3
 																																																																																															c0-1.9-0.3-3.7-1-5.4c-0.7-1.7-1.7-3.3-3-4.6L328.9,331.9z"/>
 						</mask>
-						<g class="june">
+						<g class="june seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('june')" d="M328.9,331.9c-1.2-1.3-2.7-2.3-4.4-3c-1.6-0.7-3.4-1.1-5.2-1.1c-2.1,0-4.2,0.5-6.2,1.5c-1.9,0.9-3.6,2.3-4.9,4
 																																																																																															c-1.3,1.6-2.1,3.6-2.5,5.6c-0.4,2-0.3,4.2,0.3,6.2l54.7,204.3c0.5,1.8,1.3,3.5,2.5,4.9c1.1,1.5,2.6,2.7,4.2,3.6
 																																																																																															c1.6,0.9,3.4,1.4,5.3,1.6c1.9,0.2,3.7,0,5.5-0.6c36.9-12.1,70.8-31.7,99.8-57.5c1.4-1.2,2.5-2.7,3.3-4.4c0.8-1.7,1.2-3.5,1.2-5.3
@@ -166,7 +166,7 @@
 																																																																																															c1.7-0.8,3.2-1.9,4.4-3.3c25.8-29,45.3-62.9,57.6-99.7c0.6-1.8,0.8-3.6,0.6-5.5c-0.2-1.8-0.7-3.6-1.6-5.3c-0.9-1.6-2.1-3.1-3.5-4.2
 																																																																																															C552.5,362.5,550.8,361.6,549,361.2z"/>
 						</mask>
-						<g class="may">
+						<g class="may seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('may')" d="M549,361.2l-204.3-54.8c-1.2-0.3-2.4-0.5-3.7-0.5v1.7v-1.7c-2.7,0-5.3,0.8-7.5,2.4c-2.2,1.5-3.9,3.7-4.9,6.2
 																																																																																															c-1.1,2.5-1.3,5.2-0.8,7.9c0.5,2.6,1.9,5.1,3.8,7L481,478.8c1.3,1.3,2.9,2.3,4.6,3c1.7,0.7,3.6,1,5.4,1s3.7-0.5,5.4-1.3
 																																																																																															c1.7-0.8,3.2-1.9,4.4-3.3c25.8-29,45.3-62.9,57.6-99.7c0.6-1.8,0.8-3.6,0.6-5.5c-0.2-1.8-0.7-3.6-1.6-5.3c-0.9-1.6-2.1-3.1-3.5-4.2
@@ -185,7 +185,7 @@
 																																																																																															c-1.8,2.4-2.8,5.3-2.8,8.3s1,5.9,2.8,8.3c1.8,2.4,4.4,4.1,7.3,4.9L550,357.6c1.8,0.5,3.7,0.6,5.5,0.3c1.8-0.3,3.6-0.9,5.2-1.9
 																																																																																															c1.6-1,3-2.3,4-3.8c1.1-1.5,1.8-3.2,2.2-5C574.8,309.3,574.8,270.1,566.9,232.1L566.9,232.1z"/>
 						</mask>
-						<g class="april">
+						<g class="april seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('april')" d="M566.9,232.1c-0.6-3.1-2.3-5.8-4.8-7.8c-2.4-2-5.5-3.1-8.6-3.1c-1.2,0-2.4,0.2-3.5,0.5l-204.3,54.7
 																																																																																															c-2.9,0.8-5.5,2.5-7.3,4.9c-1.8,2.4-2.8,5.3-2.8,8.3s1,5.9,2.8,8.3c1.8,2.4,4.4,4.1,7.3,4.9L550,357.6c1.8,0.5,3.7,0.6,5.5,0.3
 																																																																																															c1.8-0.3,3.6-0.9,5.2-1.9c1.6-1,3-2.3,4-3.8c1.1-1.5,1.8-3.2,2.2-5C574.8,309.3,574.8,270.1,566.9,232.1L566.9,232.1z"/>
@@ -204,7 +204,7 @@
 																																																																																															c-12.1-36.9-31.7-70.8-57.5-99.7c-1.3-1.4-2.8-2.6-4.6-3.3c-1.7-0.8-3.6-1.2-5.6-1.2c-1.8,0-3.6,0.3-5.2,1c-1.7,0.7-3.2,1.7-4.4,3
 																																																																																															L331.5,250z"/>
 						</mask>
-						<g class="march">
+						<g class="march seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('march')" d="M331.5,250c-1.9,1.9-3.3,4.3-3.8,7s-0.3,5.4,0.8,7.9c1,2.5,2.7,4.6,5,6.2c2.2,1.5,4.9,2.3,7.5,2.4
 																																																																																															c1.2,0,2.5-0.2,3.7-0.5L549,218.1c1.8-0.5,3.5-1.3,4.9-2.5c1.5-1.2,2.7-2.6,3.6-4.2c0.9-1.6,1.4-3.4,1.6-5.3
 																																																																																															c0.2-1.8-0.1-3.7-0.6-5.5c-12.1-36.9-31.7-70.8-57.5-99.7c-1.3-1.4-2.8-2.6-4.6-3.3c-1.7-0.8-3.6-1.2-5.6-1.2c-1.8,0-3.6,0.3-5.2,1
@@ -223,7 +223,7 @@
 																																																																																															c1.3-1.3,2.4-2.9,3-4.6c0.7-1.7,1-3.6,1-5.5c0-1.9-0.5-3.7-1.3-5.4c-0.8-1.7-1.9-3.2-3.3-4.4c-29-25.8-62.9-45.3-99.7-57.5
 																																																																																															c-1.4-0.5-2.8-0.7-4.3-0.7c-3,0-5.9,1-8.3,2.8c-2.4,1.8-4.1,4.4-4.9,7.3L306,234.2c-0.6,2-0.7,4.1-0.3,6.2S307,244.3,308.3,245.9z"/>
 						</mask>
-						<g class="february">
+						<g class="february seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('february')" d="M308.3,245.9c1.3,1.7,3,3.1,4.9,4c1.9,0.9,4,1.4,6.2,1.5c1.8,0,3.5-0.4,5.2-1.1c1.6-0.7,3.1-1.7,4.4-3
 																																																																																															L478.5,97.8c1.3-1.3,2.4-2.9,3-4.6c0.7-1.7,1-3.6,1-5.5c0-1.9-0.5-3.7-1.3-5.4c-0.8-1.7-1.9-3.2-3.3-4.4
 																																																																																															c-29-25.8-62.9-45.3-99.7-57.5c-1.4-0.5-2.8-0.7-4.3-0.7c-3,0-5.9,1-8.3,2.8c-2.4,1.8-4.1,4.4-4.9,7.3L306,234.2
@@ -243,7 +243,7 @@
 																																																																																															c-19.4,0-38.7,2-57.7,6c-1.8,0.4-3.5,1.1-5.1,2.2c-1.5,1.1-2.8,2.4-3.8,4c-1,1.6-1.6,3.4-1.8,5.2c-0.3,1.8-0.1,3.7,0.3,5.5
 																																																																																															L276,233.2z"/>
 						</mask>
-						<g class="january">
+						<g class="january seasonal-wheel-month-selector">
 							<path class="st2" @click="getSeasonalArticlesByMonth('january')" d="M276,233.2c0.8,2.9,2.5,5.5,4.9,7.3c2.4,1.8,5.3,2.8,8.3,2.8c3,0,5.9-1,8.3-2.8c2.4-1.8,4.1-4.4,4.9-7.3
 																																																																																															l54.7-204.4c0.5-1.8,0.6-3.7,0.3-5.5c-0.3-1.8-0.9-3.6-1.9-5.2c-1-1.6-2.2-2.9-3.8-4c-1.5-1.1-3.2-1.8-5-2.2
 																																																																																															c-18.5-3.9-37.4-5.8-56.3-5.9h-1.1c-19.4,0-38.7,2-57.7,6c-1.8,0.4-3.5,1.1-5.1,2.2c-1.5,1.1-2.8,2.4-3.8,4c-1,1.6-1.6,3.4-1.8,5.2
